// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel keyframes extract keyframes basic 1`] = `
"
const rotate360 = keyframes([], [], function createEmotionStyledRules() {
  return [{
    \\"from\\": {
      \\"transform\\": \\"rotate(0deg)\\",
      \\"WebkitTransform\\": \\"rotate(0deg)\\"
    },
    \\"to\\": {
      \\"transform\\": \\"rotate(360deg)\\",
      \\"WebkitTransform\\": \\"rotate(360deg)\\"
    }
  }];
});"
`;

exports[`babel keyframes extract keyframes basic 2`] = `
"@keyframes animation-rotate360-f35ahc { from {
            -webkit-transform: rotate(0deg);
            -ms-transform: rotate(0deg);
            transform: rotate(0deg);
          }
        
          to {
            -webkit-transform: rotate(360deg);
            -ms-transform: rotate(360deg);
            transform: rotate(360deg);
          } }"
`;

exports[`babel keyframes extract keyframes with interpolation 1`] = `
"
const rotate360 = keyframes([], [endingRotation], function createEmotionStyledRules(x0) {
  return [{
    \\"from\\": {
      \\"transform\\": \\"rotate(0deg)\\",
      \\"WebkitTransform\\": \\"rotate(0deg)\\"
    },
    \\"to\\": {
      \\"transform\\": \`rotate(\${x0})\`,
      \\"WebkitTransform\\": \`rotate(\${x0})\`
    }
  }];
});"
`;

exports[`babel keyframes inline keyframes basic 1`] = `
"
const rotate360 = keyframes([], [], function createEmotionStyledRules() {
  return [{
    \\"from\\": {
      \\"transform\\": \\"rotate(0deg)\\",
      \\"WebkitTransform\\": \\"rotate(0deg)\\"
    },
    \\"to\\": {
      \\"transform\\": \\"rotate(360deg)\\",
      \\"WebkitTransform\\": \\"rotate(360deg)\\"
    }
  }];
});"
`;

exports[`babel keyframes inline keyframes with interpolation 1`] = `
"
const rotate360 = keyframes([], [endingRotation], function createEmotionStyledRules(x0) {
  return [{
    \\"from\\": {
      \\"transform\\": \\"rotate(0deg)\\",
      \\"WebkitTransform\\": \\"rotate(0deg)\\"
    },
    \\"to\\": {
      \\"transform\\": \`rotate(\${x0})\`,
      \\"WebkitTransform\\": \`rotate(\${x0})\`
    }
  }];
});"
`;
